# OPENMP-OPENMPI

./: CMakeLists.txt  a.out  conf_file.txt  main.cpp
